# sigil

./: .gitignore  Cargo.toml  README.md
crates/kernel-cli/: Cargo.toml
crates/kernel-cli/src/: config.rs  main.rs  orchestrator.rs  output.rs
crates/lib-ami-ffi/: Cargo.toml
crates/lib-ami-ffi/src/: backchannel.rs  error.rs  lib.rs  lifecycle.rs  loader.rs
crates/lib-dsp/: Cargo.toml
crates/lib-dsp/benches/: convolution.rs
crates/lib-dsp/src/: causality.rs  convolution.rs  error.rs  eye.rs  fft.rs  interpolation.rs  lib.rs  passivity.rs  prbs.rs  resample.rs  sparam_convert.rs  window.rs
crates/lib-ibis/: Cargo.toml
crates/lib-ibis/src/: ami_parser.rs  error.rs  ibs_parser.rs  lib.rs  touchstone.rs
crates/lib-types/: Cargo.toml
crates/lib-types/src/: ami.rs  lib.rs  sparams.rs  units.rs  waveform.rs
docs/: ARCHITECTURE.md  CRITICALISSUES.md  IMPLEMENTATION_PLAN.md  TESTING_STRATEGY.md
examples/: README.md  VENDOR_FILES_GUIDE.md  channel_only_test.json  differential_test.json  pcie_gen5_config.json  simple_channel.rs  test_channel.s2p  test_channel_4port.s4p  test_crit_phys_fixes.sh
examples/output/: eye_metrics.txt
examples/output_differential/: pulse_response.csv  statistical_eye.csv  summary.txt
examples/output_trackc/: pulse_response.csv  statistical_eye.csv
