[workspace]
resolver = "2"
members = [
    "crates/lib-types",
    "crates/lib-ibis",
    "crates/lib-ami-ffi",
    "crates/lib-dsp",
    "crates/kernel-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SI-Kernel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/si-kernel/si-kernel"
rust-version = "1.82"

[workspace.dependencies]
# Parsing
nom = "8"
nom_locate = "4"

# FFI and dynamic loading
libloading = "0.8"

# Numerics and DSP
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
rustfft = "6"
realfft = "3"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
criterion = "0.5"

# Internal crates
lib-types = { path = "crates/lib-types" }
lib-ibis = { path = "crates/lib-ibis" }
lib-ami-ffi = { path = "crates/lib-ami-ffi" }
lib-dsp = { path = "crates/lib-dsp" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "thin"
codegen-units = 1
