[package]
name = "kernel-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SI-Kernel CLI: High-speed signal integrity simulation for PCIe Gen 5/6"

[[bin]]
name = "si-kernel"
path = "src/main.rs"

[dependencies]
lib-types = { workspace = true }
lib-ibis = { workspace = true }
lib-ami-ffi = { workspace = true }
lib-dsp = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
